Scrollbar problem has been solved

--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,10 @@ button {
   top: 0;
 }
 
+body {
+  height: 100000px;
+}
+
 @media only screen and (max-width: 767px) {
   #question {
     text-align: center;
@@ -203,6 +207,10 @@ button {
 }
 
 @media only screen and (max-width: 1400px) and (min-width: 768px) {
+  #question {
+    text-align: center;
+    padding: 5px 10px;
+  }
   .box-container {
     padding: 0 5px;
     width: 100%;
